2015-07-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Heed TEXINFO_XS
	environmental variable.  Idea by Karl Berry.

2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (add_text): Check for
	some non-breaking spaces.

2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Check for
	Perl's CC before AC_PROG_CC so the automatic dependency checking 
	style will not be inappropriate.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Move setting of CC 
	from here to configure.ac.

	* tp/texi2any.pl: Show error message if loading a module failed.

2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph: Run "libtoolize --copy --force"
	for libtool 2.4.6.

2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Import fewer modules by default, for speed.  
	(texi2any --help changed from about 0.4 s to about 0.1 s.).
	(%formats_table): Store name of required module in 'module' 
	values of hashes.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Add
	"require Texinfo::Convert::Paragraph" for fall-back code.
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Convert/Info.pm: Use Texinfo/Convert/Paragraph.pm 
	indirectly via Texinfo/Convert/XSParagraph/XSParagraph.pm.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs
	(xspara_new): Optional conf parameter.
	(xspara_add_next): Propagate 'transparent' argument.
	* tp/Texinfo/Convert/XSParagraph/xspara.c
	(xspara_add_next, xspara__add_next): Update state.last_letter, 
	taking into account 'transparent' argument.

	* tp/t/paragraph.t: Run tests for XSParagraph module as well as 
	Texinfo::Convert::XSParagraph.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c: Remove all comments 
	with out-of-date line numbers for Paragraph.pm.
